fixed issue where 2 scrollbars showed up

--- a/client/style.css
+++ b/client/style.css
@@ -1,12 +1,14 @@
 body {
   font-family: 'Roboto', sans-serif;
+  margin-top: 60px;
+  overflow-y: hidden;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 20% auto auto 20%;
-  grid-template-rows: auto;
-  column-gap: 1.2em;
+  grid-template-columns: auto 480px 850px auto;
+  grid-template-rows: 100vh;
+  column-gap: 1.6em;
 }
 
 .sidebar {
@@ -18,6 +20,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1.5fr);
   gap: 1.5em;
+  overflow-y: scroll;
 }
 
 .avatar-container {
